<resources>
    <string name="app_name">Calculator</string>
    <string name="percent">%</string>
    <string name="ce">CE</string>
    <string name="c">C</string>
    <string name="undo">◀</string>
    <string name="reciprocal">1/x</string>
    <string name="toSquare">x^2</string>
    <string name="extractRoot">√x</string>
    <string name="division">/</string>
    <string name="multiplication">*</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="calculate">=</string>
    <string name="changeOfSing">+/-</string>
    <string name="dot">.</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="inputCalculator">0</string>
    <string name="prevoiusAllInputCalculator"></string>
</resources>