<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#9C5F6063"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnDivision"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#5F6265"
        android:onClick="division"
        android:text="@string/division"
        android:textSize="24sp"
        android:theme="@style/ButtonsOperations.equ"
        app:layout_constraintBottom_toTopOf="@+id/btnMultiplication"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnExtractRoot"
        app:layout_constraintTop_toBottomOf="@+id/btnUndo" />


    <Button
        android:id="@+id/btnCE"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#5F6265"
        android:onClick="clear"
        android:text="@string/ce"
        android:textSize="24sp"
        android:theme="@style/ButtonsOperations.equ"
        app:layout_constraintBottom_toTopOf="@+id/btnToSquare"
        app:layout_constraintEnd_toStartOf="@+id/btnC"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnPercent"
        app:layout_constraintTop_toBottomOf="@+id/txtInput" />

    <Button
        android:id="@+id/btnC"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#5F6265"
        android:onClick="clearAll"
        android:text="@string/c"
        android:textSize="24sp"
        android:theme="@style/ButtonsOperations.equ"
        app:layout_constraintBottom_toTopOf="@+id/btnExtractRoot"
        app:layout_constraintEnd_toStartOf="@+id/btnUndo"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnCE"
        app:layout_constraintTop_toBottomOf="@+id/txtInput" />

    <Button
        android:id="@+id/btnPercent"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#5F6265"
        android:onClick="percent"
        android:shadowColor="#DC848993"
        android:text="@string/percent"
        android:textSize="24sp"
        android:theme="@style/ButtonsOperations.equ"
        app:layout_constraintBottom_toTopOf="@+id/btnReciprocal"
        app:layout_constraintEnd_toStartOf="@+id/btnCE"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtInput"
        app:strokeColor="#FFFFFF" />

    <Button
        android:id="@+id/btn2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#000000"
        android:onClick="write"
        android:text="@string/two"
        android:textSize="24sp"
        android:theme="@style/ButtonsWrite.equ"
        app:layout_constraintBottom_toTopOf="@+id/btn0"
        app:layout_constraintEnd_toStartOf="@+id/btn3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn1"
        app:layout_constraintTop_toBottomOf="@+id/btn5" />

    <Button
        android:id="@+id/btnCalculate"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#D0C4CACC"
        android:onClick="calculate"
        android:text="@string/calculate"
        android:textSize="24sp"
        android:theme="@style/ButtonCalculate.equ"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnDot"
        app:layout_constraintTop_toBottomOf="@+id/btnAddicion" />

    <Button
        android:id="@+id/btnDot"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#000000"
        android:onClick="write"
        android:text="@string/dot"
        android:textSize="24sp"
        android:theme="@style/ButtonsWrite.equ"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnCalculate"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn0"
        app:layout_constraintTop_toBottomOf="@+id/btn3" />

    <Button
        android:id="@+id/btn0"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#000000"
        android:onClick="write"
        android:text="@string/zero"
        android:textSize="24sp"
        android:theme="@style/ButtonsWrite.equ"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnDot"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnChangeOfSing"
        app:layout_constraintTop_toBottomOf="@+id/btn2" />

    <Button
        android:id="@+id/btnChangeOfSing"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#000000"
        android:onClick="changeOfSign"
        android:text="@string/changeOfSing"
        android:textSize="24sp"
        android:theme="@style/ButtonsWrite.equ"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn0"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn1" />

    <Button
        android:id="@+id/btnUndo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#5F6265"
        android:onClick="undo"
        android:text="@string/undo"
        android:textSize="36sp"
        android:textStyle="bold"
        android:theme="@style/ButtonsOperations.equ"
        app:layout_constraintBottom_toTopOf="@+id/btnDivision"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnC"
        app:layout_constraintTop_toBottomOf="@+id/txtInput" />

    <Button
        android:id="@+id/btnSubstraction"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#5F6265"
        android:onClick="subtraction"
        android:text="@string/minus"
        android:textSize="24sp"
        android:theme="@style/ButtonsOperations.equ"
        app:layout_constraintBottom_toTopOf="@+id/btnAddicion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn6"
        app:layout_constraintTop_toBottomOf="@+id/btnMultiplication" />

    <Button
        android:id="@+id/btnAddicion"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#5F6265"
        android:onClick="addition"
        android:text="@string/plus"
        android:textSize="24sp"
        android:theme="@style/ButtonsOperations.equ"
        app:layout_constraintBottom_toTopOf="@+id/btnCalculate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn3"
        app:layout_constraintTop_toBottomOf="@+id/btnSubstraction" />

    <Button
        android:id="@+id/btn5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#000000"
        android:onClick="write"
        android:text="@string/five"
        android:textSize="24sp"
        android:theme="@style/ButtonsWrite.equ"
        app:layout_constraintBottom_toTopOf="@+id/btn2"
        app:layout_constraintEnd_toStartOf="@+id/btn6"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn4"
        app:layout_constraintTop_toBottomOf="@+id/btn8" />

    <Button
        android:id="@+id/btnToSquare"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#5F6265"
        android:onClick="toSquare"
        android:text="@string/toSquare"
        android:textSize="24sp"
        android:theme="@style/ButtonsOperations.equ"
        app:layout_constraintBottom_toTopOf="@+id/btn8"
        app:layout_constraintEnd_toStartOf="@+id/btnExtractRoot"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnReciprocal"
        app:layout_constraintTop_toBottomOf="@+id/btnCE" />

    <Button
        android:id="@+id/btnExtractRoot"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#5F6265"
        android:onClick="extractRoot"
        android:text="@string/extractRoot"
        android:textSize="24sp"
        android:theme="@style/ButtonsOperations.equ"
        app:layout_constraintBottom_toTopOf="@+id/btn9"
        app:layout_constraintEnd_toStartOf="@+id/btnDivision"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnToSquare"
        app:layout_constraintTop_toBottomOf="@+id/btnC" />

    <Button
        android:id="@+id/btn3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#000000"
        android:onClick="write"
        android:text="@string/three"
        android:textSize="24sp"
        android:theme="@style/ButtonsWrite.equ"
        app:layout_constraintBottom_toTopOf="@+id/btnDot"
        app:layout_constraintEnd_toStartOf="@+id/btnAddicion"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn2"
        app:layout_constraintTop_toBottomOf="@+id/btn6" />

    <Button
        android:id="@+id/btn6"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#000000"
        android:onClick="write"
        android:text="@string/six"
        android:textSize="24sp"
        android:theme="@style/ButtonsWrite.equ"
        app:layout_constraintBottom_toTopOf="@+id/btn3"
        app:layout_constraintEnd_toStartOf="@+id/btnSubstraction"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn5"
        app:layout_constraintTop_toBottomOf="@+id/btn9" />

    <Button
        android:id="@+id/btn1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#000000"
        android:onClick="write"
        android:text="@string/one"
        android:textSize="24sp"
        android:theme="@style/ButtonsWrite.equ"
        app:layout_constraintBottom_toTopOf="@+id/btnChangeOfSing"
        app:layout_constraintEnd_toStartOf="@+id/btn2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn4" />

    <Button
        android:id="@+id/btn4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#000000"
        android:onClick="write"
        android:text="@string/four"
        android:textSize="24sp"
        android:theme="@style/ButtonsWrite.equ"
        app:layout_constraintBottom_toTopOf="@+id/btn1"
        app:layout_constraintEnd_toStartOf="@+id/btn5"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn7" />

    <Button
        android:id="@+id/btn7"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#000000"
        android:onClick="write"
        android:text="@string/seven"
        android:textSize="24sp"
        android:theme="@style/ButtonsWrite.equ"
        app:layout_constraintBottom_toTopOf="@+id/btn4"
        app:layout_constraintEnd_toStartOf="@+id/btn8"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnReciprocal" />

    <Button
        android:id="@+id/btn8"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#000000"
        android:onClick="write"
        android:text="@string/eight"
        android:textSize="24sp"
        android:theme="@style/ButtonsWrite.equ"
        app:layout_constraintBottom_toTopOf="@+id/btn5"
        app:layout_constraintEnd_toStartOf="@+id/btn9"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn7"
        app:layout_constraintTop_toBottomOf="@+id/btnToSquare" />

    <Button
        android:id="@+id/btn9"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#000000"
        android:onClick="write"
        android:text="@string/nine"
        android:textSize="24sp"
        android:theme="@style/ButtonsWrite.equ"
        app:layout_constraintBottom_toTopOf="@+id/btn6"
        app:layout_constraintEnd_toStartOf="@+id/btnMultiplication"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn8"
        app:layout_constraintTop_toBottomOf="@+id/btnExtractRoot" />

    <Button
        android:id="@+id/btnReciprocal"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#5F6265"
        android:onClick="reciprocal"
        android:text="@string/reciprocal"
        android:textSize="24sp"
        android:theme="@style/ButtonsOperations.equ"
        app:layout_constraintBottom_toTopOf="@+id/btn7"
        app:layout_constraintEnd_toStartOf="@+id/btnToSquare"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnPercent" />

    <Button
        android:id="@+id/btnMultiplication"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#5F6265"
        android:onClick="multiplication"
        android:text="@string/multiplication"
        android:textSize="24sp"
        android:theme="@style/ButtonsOperations.equ"
        app:layout_constraintBottom_toTopOf="@+id/btnSubstraction"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn9"
        app:layout_constraintTop_toBottomOf="@+id/btnDivision" />

    <TextView
        android:id="@+id/txtInput"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/inputCalculator"
        android:textAlignment="textEnd"
        android:textDirection="inherit"
        android:textSize="50sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@+id/btnPercent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPrevious" />

    <TextView
        android:id="@+id/txtPrevious"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/prevoiusAllInputCalculator"
        android:textAlignment="inherit"
        android:textDirection="inherit"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@+id/txtInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread_inside" />

</androidx.constraintlayout.widget.ConstraintLayout>